# tosa

./: .gitignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: CacheHelper.ts  Configuration.ts  Logger.ts  Utils.ts  main.ts  style.css  types.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ahk.rs  ahk_worker.rs  cmd.rs  config.rs  event_handle.rs  get_selected_text.rs  global.rs  hook.rs  hotkey.rs  lang_detect.rs  main.rs  tray.rs  window.rs
src/Background/: BaseBackground.ts  Electron.ts  Tauri.ts  index.ts
src/MiniTranslator/: App.vue
src/Plugins/OCR/: Baidu.ts  Custom.tsx  Tencent.ts  index.ts
src/Plugins/Selection/: Baidu.ts  Bing.ts  Copy.ts  Google.ts  Link.ts  Translate.ts  index.ts
src/Plugins/Translator/: AlibabaFree.ts  Baidu.ts  Bing.ts  CaiYun.ts  DeepL.ts  GeminiPro.ts  Google.ts  GoogleFree.ts  Language.ts  OpenAI.ts  Tencent.tsx  Youdao.ts  index.ts
src/ScreenCapture/: App.vue
src/SelectionTranslator/: App.vue
src/Setting/: App.vue  Autohotkey.vue  General.vue  HotkeyInput.vue  Logger.vue  Selection.vue  Service.vue  style.css
src/Translator/: App.vue  HeaderView.vue  InputArea.vue  SourceView.vue  Store.ts  TargetView.vue
src/components/: IconBtn.vue
src/icons/: SvgIcon.vue
