[package]
name = "tosa"
version = "0.1.0"
description = "Translate OCR Selection Autohotkey"
authors = ["danger-dream"]
license = "MIT"
repository = "https://www.github.com/danger-dream/tosa"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
window-shadows = "0.2.2"
tauri = { version = "1.5.4", features = [
	"dialog-all",
	"clipboard-all",
	"os-all",
	"notification-all",
	"shell-all",
	"fs-all",
	"http-all",
	"path-all",
	"window-all",
	"devtools",
	"global-shortcut-all",
	"reqwest-client",
	"system-tray",
] }
tauri-plugin-context-menu = "0.7.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0.196", features = ["derive"] }
selection = "1.1.1"
serde_json = "1.0.113"
screenshots = "0.7.3"
dirs = "5.0.1"
once_cell = "1.19.0"
log = "0.4.20"
mouse_position = "0.1.3"
libloading = "0.8"
widestring = "1.0"
image = "0.24"
base64 = "0.21"
lazy_static = "1"
active-win-pos-rs = "0.8"
enigo = "0.1"
arboard = "3.3"
mouce = "0.2"
regex = "1"
whichlang = "0.1.0"
jieba-rs = "0.6.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_DataExchange",
	"Win32_UI_Accessibility",
	"Win32_System_Com",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
